<resources>
    <string name="app_name">Al Muslim</string>
    <string name="loc_placeholder">El Marghany Street, EL Manteqa El Oula, Nasr City, Egypt</string>
    <string name="update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hij_date">5 Jumada | 1444</string>
    <string name="upcoming">Upcoming Salat,</string>
    <string name="fajr">Fajr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="salat_tim">2:35 PM</string>
    <string name="salat_tim_left">1:05 hrs left</string>
    <string name="activities">Activities</string>
    <string name="sibha_place">Your digital Sibha,</string>
    <string name="sibha_num">1346</string>
    <string name="todo">To do List</string>
    <string name="statist">Prayer Statistics</string>
    <string name="azkar_sabah">Azkar</string>
    <string name="qibla_title">Qibla Finder</string>
    <string name="qibla_title_arabic">القبلة</string>
    <string name="qibla_hint">Place your device on a flat surface, then wait until qibla cursor is stable</string>
    <string name="todo_title">To do List</string>
    <string name="todo_list_title">Current List</string>
    <string name="add_todo">Add</string>
    <string name="todo_place">Enter next todo item</string>
    <string name="add_todo_title">Add a todo item</string>
    <string name="prayer_title">Prayer Statistics</string>
    <string name="day_title">Day</string>
    <string name="save">Save</string>
    <string name="generate">Generate Previous Week Report</string>
    <string name="prayer_times">Prayer Times</string>
    <string name="prayer_times_arabic">مواعيد الصلاه</string>
    <string name="next_day">next_day</string>
    <string name="previous_day">previous_day</string>
    <string name="back_btn">Back_btn</string>
    <string name="Azkar_title" />
    <string name="azkar">Azkar</string>
    <string name="drop_down">drop_down</string>
    <string name="duhur">Dhuhr</string>
    <string name="sunrise">Sunrise</string>
    <string name="app_logo">app_logo</string>
    <string name="friday_2_december">Friday, 2 December</string>
    <string name="dummy_rate">20/35</string>
    <string name="al_emran">Al-emran</string>
    <string name="fatiha_name">سورة الفاتحه</string>
    <string name="juz_1">Juz 1</string>
    <string name="todo_list">todo_list</string>
    <string name="prayer_stats">prayer_stats</string>
    <string name="azkar_icon">azkar_icon</string>
    <string name="duaa_icon">duaa_icon</string>
    <string name="reset_icon">reset_icon</string>
    <string name="add_icon">add_icon</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="_1">1</string>
    <string name="al_fathiha">Al-Fathiha</string>
    <string name="surah_num">surah_num</string>
    <string name="_1_dot">1.</string>
    <string name="read_surat_el_kahf_3_times">Read surat el Kahf 3 times</string>
    <string name="erase_icon">erase_icon</string>
    <string name="description_viewpager">Tabs view pager</string>
    <string name="description_tablayout">Tabs layout inside view pager</string>
    <string name="content_cursor">Cursor</string>
    <string name="content_compass">Compass</string>
    <string name="choose_a_surah">Choose a surah</string>
    <string name="enter_a_surah_name">Enter a surah name</string>
    <string name="prayer_viewpager">Prayer view pager</string>
    <string name="loading">Loading</string>
    <string name="tasbeeh">Tasbeeh</string>
    <string name="al_muslim">Al Muslim</string>
    <string name="tasabeh">Tasabeh</string>
    <string name="outOf">/35</string>
</resources>