<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.QiblaFragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qibla_title"
        android:textSize="25sp"
        android:layout_marginStart="23sp"
        android:textColor="#5E8D65"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_arabic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qibla_title_arabic"
        android:textSize="25sp"
        android:layout_marginEnd="30sp"
        android:textColor="#5E8D65"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/loc_ic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toTopOf="@id/loc"
        android:background="#00000000"
        android:src="@drawable/icons8_visit_50"/>

    <TextView
        android:id="@+id/loc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/loc_placeholder"
        app:layout_constraintEnd_toEndOf="@id/title_arabic"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@id/loc_ic"
        app:layout_constraintTop_toBottomOf="@id/title"/>


    <TextView
        android:id="@+id/hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/qibla_hint"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/rel_layout"
        app:layout_constraintEnd_toEndOf="@id/title_arabic"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/loc"
        tools:ignore="TextContrastCheck" />

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/heading"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hint">

        <ImageView
            android:id="@+id/image_compass"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:src="@drawable/dial"
            android:contentDescription="@string/content_compass" />


        <ImageView
            android:id="@+id/image_cursor"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_alignTop="@+id/image_compass"
            android:layout_centerInParent="true"
            android:contentDescription="@string/content_cursor"
            android:rotation="0"
            android:src="@drawable/qibla_arrow" />


    </RelativeLayout>

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rel_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
