<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_edittext"
    android:padding="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:elevation="20dp">

    <TextView
        android:id="@+id/item_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_dot"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/item_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintEnd_toStartOf="@id/item_delete"
        app:layout_constraintStart_toEndOf="@id/item_num"
        android:text="@string/read_surat_el_kahf_3_times"/>

    <ImageButton
        android:id="@+id/item_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:contentDescription="@string/erase_icon"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>