<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PrayerStatisticsActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_prayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:minHeight="?attr/actionBarSize"
        android:background="#f5f5f5"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#00000000"
                android:contentDescription="@string/back_btn"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/prayer_title"
                android:textColor="#5E8D65"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/back_btn"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/day_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23sp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/day_title"
        android:textColor="#5E8D65"
        android:textSize="25sp"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tool_bar_prayer"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="10dp" />

    <ImageButton
        android:id="@+id/prev_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:contentDescription="@string/previous_day"
        android:src="@drawable/ic_baseline_arrow_back_ios_24_black"
        app:layout_constraintBottom_toTopOf="@id/salat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day_title"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@id/prev_day"
        android:layout_height="1dp"
        app:layout_constraintStart_toEndOf="@id/prev_day"
        app:layout_constraintEnd_toStartOf="@id/day"
        app:layout_constraintBottom_toBottomOf="@id/prev_day"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/friday_2_december"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@id/prev_day"
        app:layout_constraintBottom_toBottomOf="@id/prev_day"
        app:layout_constraintStart_toEndOf="@id/line1"
        app:layout_constraintEnd_toStartOf="@id/line2"/>

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@id/prev_day"
        app:layout_constraintBottom_toBottomOf="@id/prev_day"
        android:layout_height="1dp"
        app:layout_constraintStart_toEndOf="@id/day"
        app:layout_constraintEnd_toStartOf="@id/next_day"
        android:background="@android:color/darker_gray"/>

    <ImageButton
        android:id="@+id/next_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="#00000000"
        android:contentDescription="@string/next_day"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24_black"
        app:layout_constraintBottom_toBottomOf="@id/prev_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line2"
        app:layout_constraintTop_toTopOf="@id/prev_day"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/salat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn_check"
        app:layout_constraintTop_toBottomOf="@id/day"
        app:layout_constraintBottom_toTopOf="@id/salat2"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">


        <CheckBox
            android:id="@+id/chk1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#5E8D65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/fajr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toEndOf="@id/chk1"
            app:layout_constraintTop_toTopOf="@id/chk1"
            app:layout_constraintBottom_toBottomOf="@id/chk1"
            android:layout_marginStart="10dp"
            android:text="@string/fajr"
            android:textColor="@color/black"
            android:textSize="22sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/salat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn_check"
        app:layout_constraintTop_toBottomOf="@id/salat"
        app:layout_constraintBottom_toTopOf="@id/salat3"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">


        <CheckBox
            android:id="@+id/chk2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:buttonTint="#5E8D65"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/dhuhr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toEndOf="@id/chk2"
            app:layout_constraintTop_toTopOf="@id/chk2"
            app:layout_constraintBottom_toBottomOf="@id/chk2"
            android:layout_marginStart="10dp"
            android:text="@string/duhur"
            android:textColor="@color/black"
            android:textSize="22sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/salat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn_check"
        app:layout_constraintTop_toBottomOf="@id/salat2"
        app:layout_constraintBottom_toTopOf="@id/salat4"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">


        <CheckBox
            android:id="@+id/chk3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:buttonTint="#5E8D65"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/asr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/chk3"
            app:layout_constraintTop_toTopOf="@id/chk3"
            app:layout_constraintBottom_toBottomOf="@id/chk3"
            android:layout_marginStart="10dp"
            android:text="@string/asr"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="22sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/salat4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn_check"
        app:layout_constraintTop_toBottomOf="@id/salat3"
        app:layout_constraintBottom_toTopOf="@id/salat5"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">


        <CheckBox
            android:id="@+id/chk4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:buttonTint="#5E8D65"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/maghrib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/chk4"
            app:layout_constraintTop_toTopOf="@id/chk4"
            app:layout_constraintBottom_toBottomOf="@id/chk4"
            android:layout_marginStart="10dp"
            android:text="@string/maghrib"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="22sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/salat5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn_check"
        app:layout_constraintTop_toBottomOf="@id/salat4"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/save"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">


        <CheckBox
            android:id="@+id/chk5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:buttonTint="#5E8D65"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/isha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/chk5"
            app:layout_constraintTop_toTopOf="@id/chk5"
            app:layout_constraintBottom_toBottomOf="@id/chk5"
            android:layout_marginStart="10dp"
            android:text="@string/isha"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/black"
            android:textSize="22sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/montserrat_bold"
        android:padding="0dp"
        android:text="@string/save"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salat5"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#EE4B2B"
        android:fontFamily="@font/montserrat_bold"
        android:padding="10dp"
        android:text="@string/generate"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/prog_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/prog_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        app:layout_constraintStart_toStartOf="@id/generate"
        app:layout_constraintEnd_toEndOf="@id/generate"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/generate"
        app:layout_constraintBottom_toTopOf="@id/num_salat"
        android:max="35"
        android:progress="0"/>

    <TextView
        android:id="@+id/num_salat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/prog_bar"
        android:visibility="invisible"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="@id/prog_bar"
        app:layout_constraintTop_toBottomOf="@id/prog_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/dummy_rate"/>




</androidx.constraintlayout.widget.ConstraintLayout>