<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TodoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:minHeight="?attr/actionBarSize"
        android:background="#f5f5f5"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_margin="10dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/title"
                android:contentDescription="Back-btn" />


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_title"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#5E8D65"
                app:layout_constraintStart_toEndOf="@id/back_btn"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="30sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/todo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_todo_title"
        android:textSize="22sp"
        android:layout_marginStart="23sp"
        android:textColor="#5E8D65"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar_todo" />

    <EditText
        android:id="@+id/todo_item"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/todo_place"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:maxLength="300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todo_title" />

    <Button
        android:id="@+id/add_todo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todo_item"
        android:text="@string/add_todo"
        android:background="@drawable/rounded_btn" />

    <TextView
        android:id="@+id/todo_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_list_title"
        android:textSize="22sp"
        android:layout_marginStart="23sp"
        android:textColor="#5E8D65"
        android:textStyle="normal"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_todo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_rec"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_list_title"
        tools:listitem="@layout/todo_item" />

</androidx.constraintlayout.widget.ConstraintLayout>