<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AzkarActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_azkar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:minHeight="?attr/actionBarSize"
        android:background="#f5f5f5"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#00000000"
                android:contentDescription="@string/back_btn"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/title"
                tools:ignore="TouchTargetSizeCheck" />
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/azkar"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#5E8D65"
                app:layout_constraintStart_toEndOf="@id/back_btn"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="30sp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/spinner_style"
        android:orientation="horizontal"
        android:padding="3dp"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar_azkar"
        tools:layout_editor_absoluteX="50dp">

        <Spinner
            android:id="@+id/azkar_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:contentDescription="@string/drop_down"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            tools:ignore="ImageContrastCheck" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/AzkarRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:listitem="@layout/azkar_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>